--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ targetCompatibility = 1.8
 compileJava.options.encoding = 'UTF-8'
 
 repositories {
-    mavenCentral()
+    maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+    maven{ url 'https://lss233.com/artifactory/minecraft/'}
     maven {
         name = 'minecraft'
         url = 'https://libraries.minecraft.net/'
@@ -19,6 +20,7 @@ repositories {
         name = 'spigotmc-public'
         url = 'https://hub.spigotmc.org/nexus/content/groups/public/'
     }
+    mavenCentral()
 }
 
 dependencies {
