--- a/build.gradle
+++ b/build.gradle
@@ -2,36 +2,32 @@ plugins {
     id 'java'
 }
 
+[compileJava,compileTestJava,javadoc]*.options*.encoding = 'UTF-8'
+
 group 'org.bukkit'
-version '1.12.2'
+version '1.13.2'
 
 sourceCompatibility = 1.8
-targetCompatibility = 1.8
-compileJava.options.encoding = 'UTF-8'
 
 repositories {
-    maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
-    maven{ url 'https://lss233.com/artifactory/minecraft/'}
-    maven {
-        name = 'minecraft'
-        url = 'https://libraries.minecraft.net/'
-    }
-    maven {
-        name = 'spigotmc-public'
-        url = 'https://hub.spigotmc.org/nexus/content/groups/public/'
-    }
+    maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+    maven{ url 'https://lss233.com/artifactory/minecraft/' }
+    maven{ url 'https://hub.spigotmc.org/nexus/content/repositories/releases/'}
+    maven{ url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'}
+    maven{ url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
     mavenCentral()
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'org.hamcrest:hamcrest-library:1.3'
     compile 'org.apache.commons:commons-lang3:3.5'
-    compile 'com.googlecode.json-simple:json-simple:1.1.1'
-    compile 'com.google.guava:guava:23.0'
-    compile 'com.google.code.gson:gson:2.8.4'
-    compile 'org.yaml:snakeyaml:1.23'
-	compile 'net.md-5:bungeecord-chat:1.12-SNAPSHOT'
-    compile 'com.mojang:authlib:1.5.25'
     compile 'commons-lang:commons-lang:2.6'
+    compile 'com.googlecode.json-simple:json-simple:1.1.1'
+    compile 'com.google.guava:guava:21.0'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'org.yaml:snakeyaml:1.23'
+    compile 'com.mojang.authlib:1.5.25'
+    compile 'com.google.code.findbugs:jsr305:3.0.2'
+    compile 'net.md-5:bungeecord-chat:1.13-SNAPSHOT'
 }
