--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.mojang.authlib:1.5.25'
     compile 'com.google.code.findbugs:jsr305:3.0.2'
     compile 'net.md-5:bungeecord-chat:1.13-SNAPSHOT'
+    compile group: 'fastutil', name: 'fastutil', version: '5.0.9'
 }
